# temporal-codec-server

./: .cruft.json  .gitignore  .golangci.yml  .licenserc.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum  go.work  main.go  package-lock.json  package.json  temporal-codec-server.sln  toodaloo.md
.devcontainer/: devcontainer.json
.github/workflows/: benchmarking.yml  build.yml
apps/: go-grpc.Dockerfile  golang.Dockerfile  node.Dockerfile
apps/golang/: Dockerfile  README.md  go.mod  go.sum  keys.example.json  keys.example.yaml  main.go
apps/golang/cmd/: root.go
apps/golang/router/: healthcheck.go  middleware.go  router.go  temporal.go
apps/golang/views/: index.html  views.go
apps/server/: .air.toml  .build.yaml  go.mod  go.sum  main.go
apps/server/cmd/: root.go
apps/server/router/: router.go  temporal.go
charts/temporal-codec-server/: Chart.yaml  README.md  values.yaml
charts/temporal-codec-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  (+5 more)
cmd/: root.go
examples/dotnet/: MyActivities.cs  MyWorkflow.workflow.cs  Program.cs  README.md  dotnet.csproj
examples/golang/: README.md  go.mod  go.sum  helloworld.go  helloworld_test.go  replay_test.go
examples/golang-external/: README.md  compose.yaml  go.mod  go.sum  helloworld.json  shared.go
examples/python/: README.md  encryption.py  hello_activity.py  pyproject.toml
examples/typescript/: README.md  package-lock.json  package.json  tsconfig.json
pkg/temporal/: data_converter.go
router/: healthcheck.go  middleware.go  router.go  temporal.go
(+13 files in other folders)
