[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.1,<4",
    "cryptography>=38.0.1,<39",
    "pyyaml>=6.0.2",
    "temporalcodec",
    "temporalio>=1.12.0,<2",
]

[tool.uv.sources]
temporalcodec = { path = "../../packages/python" }
